--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/top_rated"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
         android:title="TOP RATED" />
 
     <item
