--- a/app/src/main/res/layout/fragment_movies_detail.xml
+++ b/app/src/main/res/layout/fragment_movies_detail.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.MoviesDetailFragment"
-    android:orientation="vertical">
+    android:background="@color/colorMain"
+    android:orientation="vertical"
+    tools:context=".ui.MoviesDetailFragment">
 
 
-    <TextView
-        android:id="@+id/thumbnailUrl"
+    <ImageView
+        android:id="@+id/moviePhoto"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
@@ -28,7 +29,7 @@
         android:layout_marginLeft="16dp"
         android:gravity="center_horizontal"
 
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,8 +43,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="16dp"
-        android:gravity="center_horizontal"
+        android:layout_marginLeft="16dp"
 
+        android:gravity="center_horizontal"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
@@ -56,20 +59,19 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
 
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userrating" />
 
-    <TextView
-        android:id="@+id/plotsynopsis"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/favBtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-
-        android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/releasedate" />
+        android:background="@drawable/image_border"
+        android:drawableLeft="@android:drawable/star_on"
+        android:text="ADD TO FAVOURITES"
+        android:textColor="@color/colorSecond" />
 
 
 </LinearLayout>
