--- a/app/src/main/res/layout/movies_row_layout.xml
+++ b/app/src/main/res/layout/movies_row_layout.xml
@@ -96,6 +96,19 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
                     app:srcCompat="@android:drawable/btn_star" />
+
+                <Button
+                    android:id="@+id/toDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/image_border"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="GO TO DETAİLS" />
             </LinearLayout>
 
 
