--- a/app/src/main/res/layout/fragment_movies_detail.xml
+++ b/app/src/main/res/layout/fragment_movies_detail.xml
@@ -19,21 +19,20 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-
         android:gravity="center_horizontal"
         android:textColor="@color/colorMain"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/userrating"
@@ -45,6 +44,7 @@
 
         android:layout_marginLeft="16dp"
         android:gravity="center_horizontal"
+        android:text="Rating:  "
         android:textColor="@color/colorMain"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -59,6 +59,7 @@
         android:layout_margin="10dp"
 
         android:gravity="center_horizontal"
+        android:text="Release Date: "
         android:textColor="@color/colorMain"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
